Main padding and heading updates

--- a/src/site/about.liquid
+++ b/src/site/about.liquid
@@ -3,6 +3,8 @@ layout: page
 title: About
 ---
 
+<h1>Hello!</h1>
+
 <p>
   I'm David. I'm a product engineer at <a href="https://stripe.com">Stripe</a>,
   where I build products to delight new users. I currently live in the San
