--- a/src/site/drafts/index.liquid
+++ b/src/site/drafts/index.liquid
@@ -2,4 +2,6 @@
 title: Drafts
 ---
 
-{% include post_list, posts: collections.drafts, year: 2020 %}
+<h1>Drafts</h1>
+
+{% include post_list, posts: collections.drafts %}
