--- a/src/site/index.liquid
+++ b/src/site/index.liquid
@@ -3,4 +3,6 @@ layout: page
 title: Home
 ---
 
-{% include post_list, posts: collections.posts, year: 2020 %}
+<h1>Writings</h1>
+
+{% include post_list, posts: collections.posts %}
