--- a/src/site/_includes/post_list.liquid
+++ b/src/site/_includes/post_list.liquid
@@ -1,11 +1,8 @@
-{% assign filtered_posts = posts | filter_by_year: year %}
-
-<h1>{{ year }}</h1>
 <ul class="post-list">
-  {% for post in filtered_posts %}
+  {% for post in posts %}
     <li>
       <a href="{{ post.url }}">{{ post.data.title }}</a>
-      <span class="post-date">{{ post.date | date: "%B %e" }}</span>
+      <span class="post-date">{{ post.date | date: "%B %e, %Y" }}</span>
     </li>
   {% endfor %}
 </ul>
