--- a/src/site/_includes/page.liquid
+++ b/src/site/_includes/page.liquid
@@ -15,11 +15,18 @@ layout: root
           xmlns="http://www.w3.org/2000/svg"
         >
           <g fill="none" fill-rule="evenodd">
-            <circle fill="#32414D" cx="50" cy="50" r="50"/>
-            <circle fill="#FFF" cx="50" cy="50" r="40"/>
-            <circle fill="#3867D6" cx="50" cy="50" r="30"/>
-            <path fill="#FFF" d="M21.71572875 28.78679656l7.07106781-7.0710678 49.49747469 49.49747468-7.07106781 7.0710678z"/>
+            <circle fill="#32414D" cx="50" cy="50" r="50" />
+            <circle fill="#FFF" cx="50" cy="50" r="40" />
+            <path
+              d="M50 20c16.5685425 0 30 13.4314575 30 30 0 16.4028571-13.1641715 29.7310571-29.5038951 29.9959809L50 80V20z"
+              fill="#3867D6"
+            />
+            <path
+              d="M40.444444 30c-11.2911549 0-20.4444444 8.954305-20.4444444 20 0 10.935238 8.9711391 19.8207048 20.1063581 19.9973206L40.444444 70V30z"
+              fill="#32414D"
+            />
           </g>
+
         </svg>
       </a>
     </h1>
