--- a/src/site/_includes/root.liquid
+++ b/src/site/_includes/root.liquid
@@ -10,6 +10,8 @@
     <link href="https://fonts.gstatic.com/" rel="preconnect" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Fira+Mono&family=IBM+Plex+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 
+    {{ favicon.favicon.html_code }} 
+
     {% if globals.environment == "production" %}
       <link href="/assets/css/{{ assets['main.min.css'] }}" rel="stylesheet" />
       <script defer src="/assets/js/{{ assets['main.min.js'] }}"></script>
