--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -74,7 +74,7 @@ blockquote {
 }
 
 table {
-  font-size: $font-size * 0.85;
+  font-size: $font-size * 0.875;
   border-spacing: 0;
   border: 0.1rem solid $grey01;
   width: 100%;
@@ -141,7 +141,7 @@ header {
     a:hover {
       display: block;
       border-bottom: none;
-      transition: all .2s ease-in-out;
+      transition: all 0.2s ease-in-out;
     }
 
     a:hover {
