--- a/src/site/_includes/root.liquid
+++ b/src/site/_includes/root.liquid
@@ -17,6 +17,8 @@
       <link href="/assets/css/{{ assets['main.css'] }}" rel="stylesheet" />
       <script defer src="/assets/js/{{ assets['main.js'] }}"></script>
     {% endif %}
+
+    {{ favicon.favicon.html_code }} 
   </head>
 
   <body>
