--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -68,13 +68,13 @@ ol {
 }
 
 blockquote {
-  color: $grey05;
+  color: $grey06;
   margin: ($font-size * 2) 0;
   padding: 0 ($font-size * 2);
 }
 
 table {
-  font-size: $font-size * 0.85;
+  font-size: $font-size * 0.875;
   border-spacing: 0;
   border: 0.1rem solid $grey01;
   width: 100%;
@@ -141,14 +141,14 @@ header {
     a:hover {
       display: block;
       border-bottom: none;
-      transition: all .2s ease-in-out;
+      transition: all 0.2s ease-in-out;
     }
 
     a:hover {
-      transform: scale(1.1);
+      transform: translateY(2px);
     }
 
-    img {
+    svg {
       display: block;
     }
   }
@@ -172,7 +172,7 @@ header {
 
     a {
       display: block;
-      color: $grey04;
+      color: $grey06;
       font-weight: bold;
       letter-spacing: 0.06em;
       text-transform: uppercase;
@@ -187,7 +187,7 @@ header {
 }
 
 main {
-  padding: $font-size * 3 0 $font-size * 6;
+  padding: $font-size * 2 0 $font-size * 6;
 }
 
 .post-list {
@@ -200,7 +200,7 @@ main {
   }
 
   .post-date {
-    color: $grey05;
+    color: $grey06;
     font-size: $font-size * 0.85;
     margin-left: 0.5em;
   }
@@ -208,7 +208,7 @@ main {
 
 .post {
   .post-date {
-    color: $grey05;
+    color: $grey06;
     margin: 2em 0 1em;
   }
 }
