--- a/src/site/_includes/root.liquid
+++ b/src/site/_includes/root.liquid
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta content="Personal website of David Chen" name="description" />
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <meta charset="utf-8">
+    <meta content="Personal website of David Chen" name="description">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta content="#ffffff" name="theme-color">
+
     <title>{{ title }}</title>
 
-    <link href="https://fonts.gstatic.com/" rel="dns-prefetch" />
-    <link href="https://fonts.gstatic.com/" rel="preconnect" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Mono&family=IBM+Plex+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link rel="dns-prefetch" href="https://fonts.gstatic.com/">
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fira+Mono&family=IBM+Plex+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 
     {% if globals.environment == "production" %}
-      <link href="/assets/css/{{ assets['main.min.css'] }}" rel="stylesheet" />
+      <link href="/assets/css/{{ assets['main.min.css'] }}" rel="stylesheet">
       <script defer src="/assets/js/{{ assets['main.min.js'] }}"></script>
     {% else %}
-      <link href="/assets/css/{{ assets['main.css'] }}" rel="stylesheet" />
+      <link href="/assets/css/{{ assets['main.css'] }}" rel="stylesheet">
       <script defer src="/assets/js/{{ assets['main.js'] }}"></script>
     {% endif %}
-
-    {{ favicon.favicon.html_code }} 
   </head>
 
   <body>
