--- a/src/site/_includes/page.liquid
+++ b/src/site/_includes/page.liquid
@@ -3,7 +3,7 @@ layout: root
 ---
 <div class="page">
   <header class="row">
-    <h1 class="logo">
+    <div class="logo">
       <a href="/" aria-label="Logo">
         <svg
           role="img"
@@ -29,7 +29,7 @@ layout: root
 
         </svg>
       </a>
-    </h1>
+    </div>
     <nav>
       <ul>
         {%- if globals.environment == "development" -%}
