--- a/src/site/_includes/root.liquid
+++ b/src/site/_includes/root.liquid
@@ -1,3 +1,6 @@
+{%- assign cssFile = '/assets/css/' | append: manifest['main.min.css'] -%}
+{%- assign jsFile = '/assets/js/' | append: manifest['main.min.js'] -%}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -11,18 +14,13 @@
     <link rel="dns-prefetch" href="https://fonts.gstatic.com/">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fira+Mono&family=IBM+Plex+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap">
+    <link rel="stylesheet" href="{{ cssFile }}">
 
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 
-    {% if globals.environment == "production" %}
-      <link href="/assets/css/{{ assets['main.min.css'] }}" rel="stylesheet">
-      <script defer src="/assets/js/{{ assets['main.min.js'] }}"></script>
-    {% else %}
-      <link href="/assets/css/{{ assets['main.css'] }}" rel="stylesheet">
-      <script defer src="/assets/js/{{ assets['main.js'] }}"></script>
-    {% endif %}
+    <script defer src="{{ jsFile }}"></script>
   </head>
 
   <body>
