--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -189,7 +189,7 @@ main {
   padding: $font-size * 2 0 $font-size * 6;
 }
 
-.post-list {
+.posts {
   list-style: none;
   padding: 0;
   margin: 0;
