--- a/src/site/_includes/posts.liquid
+++ b/src/site/_includes/posts.liquid
@@ -1,4 +1,4 @@
-<ul class="post-list">
+<ul class="posts">
   {% for post in posts %}
     <li>
       <a href="{{ post.url }}">{{ post.data.title }}</a>
