--- a/src/site/pages/index.liquid
+++ b/src/site/pages/index.liquid
@@ -6,4 +6,4 @@ permalink: index.html
 
 <h1>Writings</h1>
 
-{% include post_list, posts: collections.posts %}
+{% include posts, posts: collections.posts %}
