Add layouts and partials folder in _includes

--- a/src/site/pages/index.liquid
+++ b/src/site/pages/index.liquid
@@ -1,9 +1,9 @@
 ---
-layout: base
+layout: layouts/base
 title: Home
 permalink: index.html
 ---
 
 <h1>Writings</h1>
 
-{% include posts, posts: collections.posts %}
+{% include 'partials/posts', posts: collections.posts %}
