--- a/src/site/assets/css/main.css
+++ b/src/site/assets/css/main.css
@@ -656,7 +656,18 @@ main {
 }
 
 .posts li {
-  padding: 0 0 1em 0;
+  margin: 1em 0;
+}
+
+.posts .post-draft-label {
+  color: #f53b57;
+  background: rgba(245, 59, 87, 0.2);
+  font-size: 1rem;
+  text-transform: uppercase;
+  letter-spacing: 0.06em;
+  border-radius: 8px;
+  padding: 0.2em 0.8em;
+  margin-left: 1em;
 }
 
 .posts .post-date {
