--- a/src/site/_includes/partials/posts.liquid
+++ b/src/site/_includes/partials/posts.liquid
@@ -3,6 +3,9 @@
     <li>
       <a href="{{ post.url }}">{{ post.data.title }}</a>
       <span class="post-date">{{ post.date | date: "%B %e, %Y" }}</span>
+      {%- if post.data.draft -%}
+        <span class="post-draft-label">Draft</span>
+      {%- endif -%}
     </li>
   {% endfor %}
 </ul>
