--- a/src/site/_includes/layouts/post.njk
+++ b/src/site/_includes/layouts/post.njk
@@ -1,7 +1,7 @@
 {% extends 'layouts/base.njk' %}
 
 {% set metaTitle = title ~ ' — David Chen' %}
-{% set metaDescription = page.excerpt | trim %}
+{% set metaDescription = page.excerpt | trim | replace('\n', '') %}
 
 {% block content %}
 
