--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -135,7 +135,6 @@ header {
     flex-direction: column;
     justify-content: center;
     flex: 0 0 auto;
-    margin: 0;
 
     a,
     a:hover {
@@ -190,13 +189,24 @@ main {
   padding: $font-size * 2 0 $font-size * 6;
 }
 
-.post-list {
+.posts {
   list-style: none;
   padding: 0;
   margin: 0;
 
   li {
-    padding: 0 0 1em 0;
+    margin: 1em 0;
+  }
+
+  .post-draft-label {
+    color: $red02;
+    background: rgba($red02, 0.2);
+    font-size: $font-size * 0.625;
+    text-transform: uppercase;
+    letter-spacing: 0.06em;
+    border-radius: 8px;
+    padding: 0.2em 0.8em;
+    margin-left: 1em;
   }
 
   .post-date {
