--- a/src/site/assets/css/main.css
+++ b/src/site/assets/css/main.css
@@ -596,7 +596,6 @@ header .logo {
   flex-direction: column;
   justify-content: center;
   flex: 0 0 auto;
-  margin: 0;
 }
 
 header .logo a,
@@ -650,17 +649,28 @@ main {
   padding: 3.2rem 0 9.6rem;
 }
 
-.post-list {
+.posts {
   list-style: none;
   padding: 0;
   margin: 0;
 }
 
-.post-list li {
-  padding: 0 0 1em 0;
+.posts li {
+  margin: 1em 0;
 }
 
-.post-list .post-date {
+.posts .post-draft-label {
+  color: #f53b57;
+  background: rgba(245, 59, 87, 0.2);
+  font-size: 1rem;
+  text-transform: uppercase;
+  letter-spacing: 0.06em;
+  border-radius: 8px;
+  padding: 0.2em 0.8em;
+  margin-left: 1em;
+}
+
+.posts .post-date {
   color: #6c6e6f;
   font-size: 1.36rem;
   margin-left: 0.5em;
