--- a/src/site/_includes/layouts/post.njk
+++ b/src/site/_includes/layouts/post.njk
@@ -7,7 +7,7 @@
 
   <article class="post">
     <h1>{{ title }}</h1>
-    <div class="post-date">{{ page.date | date('MMMM D, YYYY') }}</div>
+    <div class="post-date">{{ page.date | moment('MMMM D, YYYY') }}</div>
     {{ content | safe }}
   </article>
 
