--- a/src/site/pages/index.njk
+++ b/src/site/pages/index.njk
@@ -14,7 +14,7 @@ permalink: index.html
     {% for post in collections.posts %}
       <li>
         <a href="{{ post.url }}">{{ post.data.title }}</a>
-        <span class="post-date">{{ post.date | date('MMMM D, YYYY') }}</span>
+        <span class="post-date">{{ post.date | moment('MMMM D, YYYY') }}</span>
         {% if post.data.draft %}
           <span class="post-draft-label">Draft</span>
         {% endif %}
