--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -202,6 +202,7 @@ main {
     color: $red02;
     background: rgba($red02, 0.2);
     font-size: $font-size * 0.625;
+    font-weight: bold;
     text-transform: uppercase;
     letter-spacing: 0.06em;
     border-radius: 8px;
