Add Open Graph and Twitter meta tags

--- a/src/site/pages/404.njk
+++ b/src/site/pages/404.njk
@@ -6,6 +6,7 @@ permalink: 404.html
 
 {% set metaTitle = 'Page not found' %}
 {% set metaDescription = 'This page does not exist' %}
+{% set metaImage = metadata.image %}
 
 {% block content %}
 
