--- a/src/site/_includes/layouts/base.njk
+++ b/src/site/_includes/layouts/base.njk
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="description" content="{{ metaDescription }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#ffffff">
 
     <title>{{ metaTitle }}</title>
+
+    <meta name="description" content="{{ metaDescription }}">
+    <meta name="theme-color" content="#ffffff">
 
     <link rel="dns-prefetch" href="https://fonts.gstatic.com/">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
@@ -16,6 +17,17 @@
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="{{ metadata.url ~ page.url }}"/>
+    <meta property="og:title" content="{{ metaTitle }}"/>
+    <meta property="og:description" content="{{ metaDescription }}"/>
+    <meta property="og:image" content="{{ metaImage }}" />
+
+    <meta name="twitter:card" content="summary"/>
+    <meta name="twitter:creator" content="{{ metadata.author.twitter }}"/>
+    <meta name="twitter:title" content="{{ metaTitle }}"/>
+    <meta name="twitter:description" content="{{ metaDescription }}"/>
 
     <script defer src="{{ '/assets/js/' ~ manifest['main.min.js'] }}"></script>
   </head>
