--- a/src/site/pages/about.njk
+++ b/src/site/pages/about.njk
@@ -6,6 +6,7 @@ permalink: about/index.html
 
 {% set metaTitle = 'About — David Chen' %}
 {% set metaDescription = 'David Chen is a software engineer in San Francisco' %}
+{% set metaImage = metadata.image %}
 
 {% block content %}
 
