--- a/src/site/pages/index.njk
+++ b/src/site/pages/index.njk
@@ -6,6 +6,7 @@ permalink: index.html
 
 {% set metaTitle = metadata.title %}
 {% set metaDescription = metadata.description %}
+{% set metaImage = metadata.image %}
 
 {% block content %}
 
