--- a/src/site/feed.njk
+++ b/src/site/feed.njk
@@ -4,7 +4,7 @@ eleventyExcludeFromCollections: true
 ---
 <?xml version="1.0" encoding="utf-8"?>
 <feed xmlns="http://www.w3.org/2005/Atom">
-  <id>{{ metadata.url }}</id>
+  <id>{{ metadata.url ~ '/' }}</id>
   <title>{{ metadata.title }}</title>
   <subtitle>{{ metadata.description }}</subtitle>
   <icon>{{ metadata.url ~ '/assets/logo/logo-48x48.png' }}</icon>
