--- a/src/site/_includes/layouts/base.njk
+++ b/src/site/_includes/layouts/base.njk
@@ -18,16 +18,18 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 
-    <meta property="og:type" content="website"/>
-    <meta property="og:url" content="{{ metadata.url ~ page.url }}"/>
-    <meta property="og:title" content="{{ metaTitle }}"/>
-    <meta property="og:description" content="{{ metaDescription }}"/>
-    <meta property="og:image" content="{{ metaImage }}" />
+    <link rel="canonical" href="{{ metadata.url ~ page.url }}">
 
-    <meta name="twitter:card" content="summary"/>
-    <meta name="twitter:creator" content="{{ metadata.author.twitter }}"/>
-    <meta name="twitter:title" content="{{ metaTitle }}"/>
-    <meta name="twitter:description" content="{{ metaDescription }}"/>
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="{{ metadata.url ~ page.url }}">
+    <meta property="og:title" content="{{ metaTitle }}">
+    <meta property="og:description" content="{{ metaDescription }}">
+    <meta property="og:image" content="{{ metaImage }}">
+
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:creator" content="{{ metadata.author.twitter }}">
+    <meta name="twitter:title" content="{{ metaTitle }}">
+    <meta name="twitter:description" content="{{ metaDescription }}">
 
     <script defer src="{{ '/assets/js/' ~ manifest['main.min.js'] }}"></script>
   </head>
