--- a/src/site/_includes/layouts/base.njk
+++ b/src/site/_includes/layouts/base.njk
@@ -25,8 +25,10 @@
     <meta property="og:title" content="{{ metaTitle }}">
     <meta property="og:description" content="{{ metaDescription }}">
     <meta property="og:image" content="{{ metaImage }}">
+    <meta property="og:site_name" content="davidchen.io">
 
     <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="{{ metadata.author.twitter }}">
     <meta name="twitter:creator" content="{{ metadata.author.twitter }}">
     <meta name="twitter:title" content="{{ metaTitle }}">
     <meta name="twitter:description" content="{{ metaDescription }}">
