--- a/src/site/pages/404.njk
+++ b/src/site/pages/404.njk
@@ -7,7 +7,7 @@ eleventyExcludeFromCollections: true
 
 {% set metaTitle = 'Page not found' %}
 {% set metaDescription = 'This page does not exist' %}
-{% set metaImage = metadata.image %}
+{% set metaImage = metadata.logo %}
 
 {% block content %}
 
