Add period to site descriptions

--- a/src/site/pages/about.njk
+++ b/src/site/pages/about.njk
@@ -5,7 +5,7 @@ permalink: about/index.html
 {% extends 'layouts/base.njk' %}
 
 {% set metaTitle = 'About — David Chen' %}
-{% set metaDescription = 'David Chen is a software engineer in San Francisco' %}
+{% set metaDescription = 'David Chen is a software engineer in San Francisco.' %}
 {% set metaImage = metadata.logo %}
 
 {% block content %}
