--- a/src/site/pages/index.njk
+++ b/src/site/pages/index.njk
@@ -4,9 +4,9 @@ permalink: index.html
 
 {% extends 'layouts/base.njk' %}
 
-{% set metaTitle = metadata.title %}
-{% set metaDescription = metadata.description %}
-{% set metaImage = metadata.logo %}
+{% set metaTitle = site.title %}
+{% set metaDescription = site.description %}
+{% set metaImage = site.logo %}
 
 {% block content %}
 
