--- a/src/site/robots.njk
+++ b/src/site/robots.njk
@@ -2,7 +2,7 @@
 permalink: robots.txt
 eleventyExcludeFromCollections: true
 ---
-Sitemap: {{ metadata.url ~ '/sitemap.xml' }}
+Sitemap: {{ site.url ~ '/sitemap.xml' }}
 
 User-agent: *
 Disallow:
