Reinstate Fira Mono

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -31,4 +31,4 @@ $page-gutter: 2rem;
 
 $font-stack: 'IBM Plex Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI',
   'Helvetica Neue', Roboto, Ubuntu, sans-serif;
-$font-stack-mono: Menlo, Consolas, 'Liberation Mono', monospace;
+$font-stack-mono: 'Fira Mono', Menlo, Consolas, 'Liberation Mono', monospace;
