Remove periods from meta description

--- a/src/site/pages/404.njk
+++ b/src/site/pages/404.njk
@@ -6,7 +6,7 @@ eleventyExcludeFromCollections: true
 {% extends 'layouts/base.njk' %}
 
 {% set metaTitle = 'Page not found' %}
-{% set metaDescription = 'This page does not exist.' %}
+{% set metaDescription = 'This page does not exist' %}
 {% set metaImage = site.logo %}
 
 {% block content %}
