--- a/src/site/pages/index.njk
+++ b/src/site/pages/index.njk
@@ -4,22 +4,22 @@ permalink: index.html
 
 {% extends 'layouts/base.njk' %}
 
-{% set metaTitle = 'David Chen' %}
-{% set metaDescription = 'Ramblings by David Chen' %}
+{% set metaTitle = site.title %}
+{% set metaDescription = site.description %}
 
 {% block content %}
 
   <h1>Writings</h1>
   <ul class="posts">
-    {% for post in collections.posts %}
+    {%- for post in collections.posts %}
       <li>
         <a href="{{ post.url }}">{{ post.data.title }}</a>
-        <span class="post-date">{{ post.date | date('MMMM D, YYYY') }}</span>
+        <span class="post-date">{{ post.date | moment('MMMM D, YYYY') }}</span>
         {% if post.data.draft %}
           <span class="post-draft-label">Draft</span>
         {% endif %}
       </li>
-    {% endfor %}
+    {%- endfor %}
   </ul>
 
 {% endblock %}
