--- a/src/site/_includes/layouts/base.njk
+++ b/src/site/_includes/layouts/base.njk
@@ -19,7 +19,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 
     <link rel="canonical" href="{{ site.url ~ page.url }}">
-    <link rel="alternate" type="application/atom+xml" title=href="{{ site.url ~ '/feed.xml' }}">
+    <link rel="alternate" type="application/atom+xml" title="Atom feed — David Chen" href="{{ site.url ~ '/feed.xml' }}">
     
     <meta property="og:type" content="website">
     <meta property="og:url" content="{{ site.url ~ page.url }}">
