--- a/src/site/feed.njk
+++ b/src/site/feed.njk
@@ -7,7 +7,7 @@ eleventyExcludeFromCollections: true
   <id>{{ site.url ~ '/' }}</id>
   <title>{{ site.title }}</title>
   <subtitle>{{ site.description }}</subtitle>
-  <icon>{{ site.url ~ '/assets/logo/logo-48x48.png' }}</icon>
+  <icon>{{ site.url ~ '/assets/logo/logo-128x128.png' }}</icon>
   <author>
     <name>{{ site.author.name }}</name>
     <email>{{ site.author.email }}</email>
