--- a/src/scss/prism.scss
+++ b/src/scss/prism.scss
@@ -56,7 +56,7 @@ pre > code {
 .token.blockquote,
 .token.cdata,
 .token.comment {
-  color: #969896;
+  color: #646768;
 }
 
 .token.builtin,
@@ -65,7 +65,7 @@ pre > code {
 .token.keyword,
 .token.operator,
 .token.rule {
-  color: #d73a49;
+  color: #cf1736;
 }
 
 .token.attr-value,
@@ -90,7 +90,7 @@ pre > code {
 .token.prolog,
 .token.selector,
 .token.tag {
-  color: #22863a;
+  color: #1f7a26;
 }
 
 .token.attr-name,
@@ -121,10 +121,10 @@ pre > code {
 
 .token.inserted {
   background-color: #eaffea;
-  color: #22863a;
+  color: #1f7a26;
 }
 
 .token.deleted {
   background-color: #ffecec;
-  color: #d73a49;
+  color: #cf1736;
 }
