--- a/src/site/assets/css/main.css
+++ b/src/site/assets/css/main.css
@@ -391,7 +391,7 @@ pre > code {
 .token.blockquote,
 .token.cdata,
 .token.comment {
-  color: #969896;
+  color: #646768;
 }
 
 .token.builtin,
@@ -400,7 +400,7 @@ pre > code {
 .token.keyword,
 .token.operator,
 .token.rule {
-  color: #d73a49;
+  color: #cf1736;
 }
 
 .token.attr-value,
@@ -425,7 +425,7 @@ pre > code {
 .token.prolog,
 .token.selector,
 .token.tag {
-  color: #22863a;
+  color: #1f7a26;
 }
 
 .token.attr-name,
@@ -456,12 +456,12 @@ pre > code {
 
 .token.inserted {
   background-color: #eaffea;
-  color: #22863a;
+  color: #1f7a26;
 }
 
 .token.deleted {
   background-color: #ffecec;
-  color: #d73a49;
+  color: #cf1736;
 }
 
 ::selection {
