--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -47,13 +47,12 @@ h6 {
 }
 
 a {
-  color: $grey10;
-  text-decoration: none;
-  border-bottom: solid 0.15em rgba($blue02, 0.5);
+  color: $blue02;
+  text-decoration: underline rgba($blue02, 0.4);
 
   &:hover {
-    text-decoration: none;
-    border-bottom: solid 0.15em $blue02;
+    color: $blue02;
+    text-decoration: underline $blue02;
   }
 }
 
@@ -139,7 +138,6 @@ header {
     a,
     a:hover {
       display: block;
-      border-bottom: none;
     }
 
     svg {
@@ -170,11 +168,11 @@ header {
       font-weight: bold;
       letter-spacing: 0.06em;
       text-transform: uppercase;
-      border-bottom: none;
+      text-decoration: none;
 
       &:hover {
         color: $grey10;
-        border-bottom: none;
+        text-decoration: none;
       }
     }
   }
@@ -191,18 +189,32 @@ main {
 
   li {
     margin: 1em 0;
+
+    a {
+      color: $grey10;
+      text-decoration: none;
+      border-bottom: solid 0.15em rgba($blue02, 0.4);
+
+      &:hover {
+        text-decoration: none;
+        border-bottom: solid 0.15em $blue02;
+      }
+    }
   }
 
-  .draft-label {
+  .draft {
     color: $red02;
     background: rgba($red02, 0.2);
     font-size: $font-size * 0.625;
     font-weight: bold;
     text-transform: uppercase;
     letter-spacing: 0.06em;
-    border-radius: 8px;
+    border-radius: 0.8em;
     padding: 0.2em 0.8em;
-    margin-left: 1em;
+    margin-left: 0.2em;
+    position: relative;
+    left: 0;
+    bottom: 0.2em;
   }
 
   .published-date {
