--- a/src/site/assets/css/main.css
+++ b/src/site/assets/css/main.css
@@ -509,14 +509,13 @@ h6 {
 }
 
 a {
-  color: #0a0d0f;
-  text-decoration: none;
-  border-bottom: solid 0.15em rgba(56, 103, 214, 0.5);
+  color: #3867d6;
+  text-decoration: underline rgba(56, 103, 214, 0.4);
 }
 
 a:hover {
-  text-decoration: none;
-  border-bottom: solid 0.15em #3867d6;
+  color: #3867d6;
+  text-decoration: underline #3867d6;
 }
 
 em,
@@ -601,7 +600,6 @@ header .logo {
 header .logo a,
 header .logo a:hover {
   display: block;
-  border-bottom: none;
 }
 
 header .logo svg {
@@ -632,12 +630,12 @@ header nav a {
   font-weight: bold;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  border-bottom: none;
+  text-decoration: none;
 }
 
 header nav a:hover {
   color: #0a0d0f;
-  border-bottom: none;
+  text-decoration: none;
 }
 
 main {
@@ -654,16 +652,30 @@ main {
   margin: 1em 0;
 }
 
-.posts .draft-label {
+.posts li a {
+  color: #0a0d0f;
+  text-decoration: none;
+  border-bottom: solid 0.15em rgba(56, 103, 214, 0.4);
+}
+
+.posts li a:hover {
+  text-decoration: none;
+  border-bottom: solid 0.15em #3867d6;
+}
+
+.posts .draft {
   color: #f53b57;
   background: rgba(245, 59, 87, 0.2);
   font-size: 1rem;
   font-weight: bold;
   text-transform: uppercase;
   letter-spacing: 0.06em;
-  border-radius: 8px;
+  border-radius: 0.8em;
   padding: 0.2em 0.8em;
-  margin-left: 1em;
+  margin-left: 0.2em;
+  position: relative;
+  left: 0;
+  bottom: 0.2em;
 }
 
 .posts .published-date {
