--- a/src/site/pages/about.njk
+++ b/src/site/pages/about.njk
@@ -26,9 +26,9 @@ permalink: about/index.html
     My blog has an <a href="/feed.xml">Atom feed</a>. My email address is
     <a href="mailto:{{ site.author.email }}">{{ site.author.email }}</a>.
     You can also find me on
-    <a href="{{ site.links.twitter }}">Twitter</a>,
-    <a href="{{ site.links.github }}">GitHub</a>, and
-    <a href="{{ site.links.linkedin }}">LinkedIn</a>.
+    <a href="{{ site.twitter.link }}">Twitter</a>,
+    <a href="{{ site.github.link }}">GitHub</a>, and
+    <a href="{{ site.linkedin.link }}">LinkedIn</a>.
   </p>
 
 {% endblock %}
