--- a/src/site/assets/css/main.css
+++ b/src/site/assets/css/main.css
@@ -391,7 +391,7 @@ pre > code {
 .token.blockquote,
 .token.cdata,
 .token.comment {
-  color: #969896;
+  color: #646768;
 }
 
 .token.builtin,
@@ -400,7 +400,7 @@ pre > code {
 .token.keyword,
 .token.operator,
 .token.rule {
-  color: #d73a49;
+  color: #cf1736;
 }
 
 .token.attr-value,
@@ -425,7 +425,7 @@ pre > code {
 .token.prolog,
 .token.selector,
 .token.tag {
-  color: #22863a;
+  color: #1f7a26;
 }
 
 .token.attr-name,
@@ -456,12 +456,12 @@ pre > code {
 
 .token.inserted {
   background-color: #eaffea;
-  color: #22863a;
+  color: #1f7a26;
 }
 
 .token.deleted {
   background-color: #ffecec;
-  color: #d73a49;
+  color: #cf1736;
 }
 
 ::selection {
@@ -509,14 +509,13 @@ h6 {
 }
 
 a {
-  color: #0a0d0f;
-  text-decoration: none;
-  border-bottom: solid 0.15em rgba(56, 103, 214, 0.5);
+  color: #3867d6;
+  text-decoration: underline rgba(56, 103, 214, 0.4);
 }
 
 a:hover {
-  text-decoration: none;
-  border-bottom: solid 0.15em #3867d6;
+  color: #3867d6;
+  text-decoration: underline #3867d6;
 }
 
 em,
@@ -571,6 +570,9 @@ hr {
 }
 
 .page {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   padding-left: 2rem;
   padding-right: 2rem;
 }
@@ -601,7 +603,6 @@ header .logo {
 header .logo a,
 header .logo a:hover {
   display: block;
-  border-bottom: none;
 }
 
 header .logo svg {
@@ -632,15 +633,16 @@ header nav a {
   font-weight: bold;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  border-bottom: none;
+  text-decoration: none;
 }
 
 header nav a:hover {
   color: #0a0d0f;
-  border-bottom: none;
+  text-decoration: none;
 }
 
 main {
+  flex: 1 0 auto;
   padding: 3.2rem 0 9.6rem;
 }
 
@@ -654,25 +656,40 @@ main {
   margin: 1em 0;
 }
 
-.posts .post-draft-label {
+.posts li a {
+  color: #0a0d0f;
+  text-decoration: none;
+  border-bottom: solid 0.15em rgba(56, 103, 214, 0.4);
+}
+
+.posts li a:hover {
+  text-decoration: none;
+  border-bottom: solid 0.15em #3867d6;
+}
+
+.posts .draft {
   color: #f53b57;
   background: rgba(245, 59, 87, 0.2);
   font-size: 1rem;
   font-weight: bold;
   text-transform: uppercase;
   letter-spacing: 0.06em;
-  border-radius: 8px;
+  border-radius: 0.8em;
   padding: 0.2em 0.8em;
-  margin-left: 1em;
+  margin-left: 0.2em;
+  position: relative;
+  left: 0;
+  bottom: 0.2em;
 }
 
-.posts .post-date {
+.posts .published-date {
   color: #6c6e6f;
   font-size: 1.4rem;
   margin-left: 0.5em;
 }
 
-.post .post-date {
+.post .published-date {
+  display: block;
   color: #6c6e6f;
   margin: 2em 0 1em;
 }
