Update wording on the about page

--- a/src/site/pages/about.njk
+++ b/src/site/pages/about.njk
@@ -13,22 +13,23 @@ permalink: about/index.html
 
   <p>
     I'm David Chen, a software engineer living in the San Francisco Bay Area.
-    This site is dedicated to my creative interests and whim. 
+    This site is dedicated to my creative interests and whims.
   </p>
 
   <p>
-   I work at <a href="https://stripe.com">Stripe</a>, where I build products to
-   delight new users. Previously, I've worked at Google and Amazon, and studied
-   computer science at the University of Michigan in Ann Arbor.
+   I currently work at <a href="https://stripe.com">Stripe</a>, where I build
+   products to delight new users. Previously, I've worked at Google and Amazon,
+   and studied computer science at the University of Michigan in Ann Arbor.
   </p>
 
   <p>
-    My blog has an <a href="/feed.xml">Atom feed</a>. My email address is
+    My email address is
     <a href="mailto:{{ site.author.email }}">{{ site.author.email }}</a>.
     You can also find me on
     <a href="{{ site.twitter.link }}">Twitter</a>,
     <a href="{{ site.github.link }}">GitHub</a>, and
-    <a href="{{ site.linkedin.link }}">LinkedIn</a>.
+    <a href="{{ site.linkedin.link }}">LinkedIn</a>. My blog also has an
+    <a href="/feed.xml">Atom feed</a>.
   </p>
 
 {% endblock %}
