--- a/src/site/_includes/layouts/base.njk
+++ b/src/site/_includes/layouts/base.njk
@@ -21,21 +21,28 @@
     <link rel="canonical" href="{{ site.url ~ page.url }}">
     <link rel="alternate" type="application/atom+xml" title="David Chen's blog" href="{{ site.feed }}">
     
+    <script defer src="{{ '/assets/js/' ~ manifest['main.min.js'] }}"></script>
+    
+    <!-- Open Graph -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="{{ site.url ~ page.url }}">
     <meta property="og:title" content="{{ metaTitle }}">
     <meta property="og:description" content="{{ metaDescription }}">
-    <meta property="og:image" content="{{ site.url ~ site.logo }}">
-    <meta property="og:site_name" content="davidchen.now.sh">
+    <meta property="og:image" content="{{ metaImage or (site.url ~ site.logo) }}">
+    <meta property="og:site_name" content="{{ site.title }}">
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="{{ site.handles.twitter }}">
     <meta name="twitter:creator" content="{{ site.handles.twitter }}">
     <meta name="twitter:title" content="{{ metaTitle }}">
     <meta name="twitter:description" content="{{ metaDescription }}">
-    <meta name="twitter:image" content="{{ site.url ~ site.logo }}">
+    <meta name="twitter:image" content="{{ metaImage or (site.url ~ site.logo)}}">
 
-    <script defer src="{{ '/assets/js/' ~ manifest['main.min.js'] }}"></script>
+    <!-- Google structured data -->
+    {%- if structuredData %}
+      {{ structuredData | safe }}
+    {%- endif %}
   </head>
 
   <body>
