--- a/src/site/_includes/layouts/base.njk
+++ b/src/site/_includes/layouts/base.njk
@@ -73,6 +73,9 @@
             <li>
               <a href="/about">about</a>
             </li>
+            <li>
+              <a href="{{ site.feed }}">rss</a>
+            </li>
           </ul>
         </nav>
       </header>
